# FineTuneHarness

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml  gpu.yml
configs/experiments/: ablation_config.json  ablation_tasks.json
configs/local/: dev_config.json  dev_tasks.json
configs/production/: prod_config.json  prod_tasks_template.json
docs/: LIE_RESISTANCE_AUDIT.md  architecture.md  operations.md
skills/: machine-learning-engineer.md  nlp-engineer.md  scientific-literature-researcher.md
skills/biology/: validators.py
src/finetuneharness/: __init__.py
src/finetuneharness/cli/: main.py
src/finetuneharness/evaluation/: __init__.py  comparator.py  metrics.py  report.py  validator.py
src/finetuneharness/examples/: __init__.py  lora_handler.py  reference_handler.py
src/finetuneharness/executor/: policy.py  resources.py  seeding.py  worker.py
src/finetuneharness/observability/: logging.py
src/finetuneharness/orchestrator/: approval.py  hooks.py  lifecycle.py  runner.py  scheduler.py
tests/: conftest.py
tests/concurrency/: test_concurrent_stress.py  test_lease_race.py  test_multiprocess.py
tests/e2e/: test_cli_workflow.py  test_full_pipeline.py
tests/fixtures/: __init__.py  base_config.json  helpers.py  tasks_grid.json  tasks_minimal.json
tests/integration/: test_approval_to_execution.py  test_evaluation_pipeline.py  test_lora_handler.py  test_reference_handler.py  test_worker_drain.py
tests/unit/: test_approval.py  test_artifact_store.py  test_comparison_rigorous.py  test_concurrency.py  test_evaluation.py  test_guardrails.py  test_hooks.py  test_hooks_builtin.py  test_integrity.py  test_json_formatter.py  test_lifecycle.py  test_memory_store_lease.py  test_metrics.py  test_recovery.py  test_registry.py  test_reproducibility.py  test_resource_aware.py  test_result_validator.py  test_retry_policy.py  test_retry_timeout.py  test_run_status.py  test_runner.py  test_sandbox.py  test_seeding.py  test_sqlite_store.py  test_task_dispatcher.py  test_task_state_machine.py  test_timeout_isolation.py  test_timeout_preemptive.py  test_validation.py  test_verifier.py  test_worker.py  test_worker_artifacts.py
(+17 files in other folders)
