[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "finetuneharness"
version = "0.1.0"
description = "Reliable execution and evaluation harness for long-running ML and agent workloads"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
# Resource-aware concurrency reads free GPU memory via NVML. Optional: without it
# (and without nvidia-smi) the monitor reports no GPU and draining falls back to
# sequential. Use nvidia-ml-py (the maintained package that provides the `pynvml`
# module) rather than the deprecated standalone `pynvml` that torch warns about.
gpu = [
  "nvidia-ml-py>=12.0",
]
# Dependencies for the reference LoRA handler (finetuneharness.examples.lora_handler).
lora = [
  "torch>=2.2",
  "peft>=0.10",
]
dev = [
  "pytest>=8.2",
  "ruff>=0.5",
  "mypy>=1.10",
]

[project.scripts]
finetuneharness = "finetuneharness.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/finetuneharness"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint.per-file-ignores]
# registry/ deliberately re-exports submodules after defining its public surface,
# so module-level imports are not all at the top.
"src/finetuneharness/registry/__init__.py" = ["E402"]

[tool.mypy]
python_version = "3.11"
strict = true
